--- a/pag1/style.css
+++ b/pag1/style.css
@@ -6,9 +6,9 @@
 header {
     display: flex;
     justify-content: space-between;
-    height: 83px;
+    height: 7vh;
     align-items: center;
-    padding: 0px 5vw;
+    padding: 0px 3vw;
 }
 
 footer {
@@ -45,7 +45,7 @@ ul {
 }
 
 .mainImg {
-    background-image: url("imgs/background.png");
+    background-image: url("/imgs/background.png");
     background-size: cover;
     background-position: center;
     width: 100vw;
@@ -60,23 +60,43 @@ ul {
 }
 
 .blog {
-    width: 100vw;
+    width: 100%;
+    padding: 0px 1rem;
 
 }
 
 .blog img {
-    width: 90%;
-    background-size: contain;
+    width: 100%;
+    object-fit: contain;
 }
 
 .blogs {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    row-gap: 2rem;
-    padding: 2rem 1rem;
+    padding: 6% 3% 0 3%;
+    gap: 2rem;
+}
 
+.addBlogs {
+    display: flex;
+    justify-content: center;
+    text-decoration: underline;
+    margin: 1rem 0 2rem 0;
+}
+
+h1,
+h2 {
+    font-weight: bold;
 }
 
 p {
-    margin: 1rem 0;
+    margin: 0.5rem 0px;
+}
+
+@media(min-width: 415px) {
+    .blogs {
+        grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
+        grid-auto-flow: dense;
+
+    }
 }
