--- a/pag3/style3.css
+++ b/pag3/style3.css
@@ -9,6 +9,7 @@ header {
     height: 7vh;
     align-items: center;
     padding: 0px 3vw;
+    position: relative;
 }
 
 footer {
@@ -44,19 +45,9 @@ ul {
     gap: 10px;
 }
 
-.mainImg {
-    background-image: url("/imgs/background.png");
-    background-size: cover;
-    background-position: center;
-    width: 100vw;
-    aspect-ratio: 16 / 9;
-    position: relative;
-    color: white;
-    display: flex;
-    justify-content: end;
-    padding: 2rem;
-    max-height: 500px;
-    flex-direction: column;
+.textDescription {
+    padding: 4rem 15vw;
+    ;
 }
 
 .blog {
@@ -65,12 +56,32 @@ ul {
 
 }
 
+.aboutMe {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+    gap: 2rem;
+
+}
+
+.myImg {
+    margin: 1rem;
+    height: 10rem;
+    width: 10rem;
+    border-radius: 50%;
+    background-color: pink;
+}
+
 .blog img {
     width: 100%;
     object-fit: contain;
 }
 
 .blogs {
+    width: 90%;
+    margin: 0px auto;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     padding: 6% 3% 0 3%;
@@ -98,7 +109,21 @@ a {
     color: black;
 }
 
-.navBar {
+nav {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.fa-solid {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-500%);
+    transform: translateX(-100%);
+}
+
+.hide {
     display: none;
 }
 
@@ -107,6 +132,10 @@ a {
         grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
         grid-auto-flow: dense;
 
+    }
+
+    .aboutMe {
+        flex-direction: row;
     }
 
     .navBar {
