--- a/pag2/style2.css
+++ b/pag2/style2.css
@@ -9,6 +9,7 @@ header {
     height: 7vh;
     align-items: center;
     padding: 0px 3vw;
+    position: relative;
 }
 
 footer {
@@ -31,6 +32,13 @@ ul {
     flex-direction: row;
     list-style: none;
     gap: 20px;
+}
+
+li {
+    padding: 0px 1rem;
+    border: 1px solid black;
+    border-radius: 3px;
+    background-color: white;
 }
 
 .logo img {
@@ -102,6 +110,23 @@ a {
 }
 
 .navBar {
+    display: block;
+    position: absolute;
+    right: 0;
+    bottom: -100%;
+    width: rem;
+    padding: 0;
+    border-radius: 5px;
+}
+
+.fa-solid {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translate(-100%, -50%);
+}
+
+.hide {
     display: none;
 }
 
@@ -112,11 +137,22 @@ a {
 
     }
 
+    .aboutMe {
+        flex-direction: row;
+    }
+
     .navBar {
         display: flex;
+        position: relative;
+        width: auto;
     }
 
     .fa-solid {
         display: none;
+    }
+
+    li {
+        padding: 0px;
+        border: none;
     }
 }
