--- a/pag1/style.css
+++ b/pag1/style.css
@@ -9,6 +9,7 @@ header {
     height: 7vh;
     align-items: center;
     padding: 0px 3vw;
+    position: relative;
 }
 
 footer {
@@ -31,6 +32,13 @@ ul {
     flex-direction: row;
     list-style: none;
     gap: 20px;
+}
+
+li {
+    padding: 0px 1rem;
+    border: 1px solid black;
+    border-radius: 3px;
+    background-color: white;
 }
 
 .logo img {
@@ -99,6 +107,24 @@ a {
 }
 
 .navBar {
+    display: block;
+    position: absolute;
+    right: 0;
+    bottom: -100%;
+    width: rem;
+    padding: 0;
+    border-radius: 5px;
+    z-index: 1;
+}
+
+.fa-solid {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translate(-100%, -50%);
+}
+
+.hide {
     display: none;
 }
 
@@ -109,11 +135,22 @@ a {
 
     }
 
+    .aboutMe {
+        flex-direction: row;
+    }
+
     .navBar {
         display: flex;
+        position: relative;
+        width: auto;
     }
 
     .fa-solid {
         display: none;
+    }
+
+    li {
+        padding: 0px;
+        border: none;
     }
 }
